# loxxcc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
doc/: grammar.md
include/: Utility.h
scripts/: render_ast.py  watch_and_run.sh
src/: CMakeLists.txt  main.cpp
src/common/: Utility.h  any.h  config.h.in  format.h  types.h  variant.h  visitor.h
src/lox/: CMakeLists.txt  callable.cpp  callable.h  common.h  compiler.cpp  compiler.h  decl.cpp  decl.h  errors.cpp  errors.h  evaluator.cpp  evaluator.h  expression.h  format.h  interpreter.cpp  interpreter.h  mp.h  parser.cpp  parser.h  printer.cpp  printer.h  scanner.cpp  scanner.h  stmt.h  variant.h  visitor.h  visitor_instance.h
src/vm/: CMakeLists.txt  chunk.h  compile.cc  compile.h  compiler.h  debug.h  vm.cpp  vm.h
test/: CMakeLists.txt
test/lox/: debug.lox  normal.lox  parser_test.lox
test/src/: config.h  config.h.in  debug_tests.cpp  divider_tests.cpp  evaluator_tests.cpp  expression_tests.cpp  parser_tests.cpp  scanner_tests.cpp  testscaffold.h  variant_tests.cpp
test/src/clox/: CMakeLists.txt  chunk_tests.cpp  compiler_tests.cpp  vm_tests.cpp
test/src/jlox/: CMakeLists.txt  config.h  evaluator_tests.cpp  fmt_tests.cpp  parser_tests.cpp
